--- a/insha.css
+++ b/insha.css
@@ -20,7 +20,9 @@
     text-decoration: none;
     font-size: 17px;
   }
-
+.text{
+    font-size: 120%;
+}
   /* Change the color of links on hover */
   .topnav a:hover {
     background-color: #ddd;
